--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<div class="cont">
 		<h1>Bye GUYS,</h1>
 		<h2>Welcome to the web development workshop.</h2>
-		<h3>I am Anishi Mishra</h3>
+		<h3>I am Shreya Singh</h3>
 	</div>
 </body>
 </html>
